--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "Update/Add Azure WebApp settings",
   "main": "lib/main.js",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@types/babel__traverse": "^7.17.1",
-    "@types/q": "^1.5.2",
-    "azure-actions-appservice-rest": "^1.3.12",
+    "@actions/core": "^1.11.1",
+    "azure-actions-appservice-rest": "^1.3.19",
     "azure-actions-webclient": "^1.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "@types/node": "^12.20.55",
-    "jest": "^25.5.4",
-    "ts-jest": "^25.5.1",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.10"
+    "@eslint/js": "^9.25.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.32",
+    "eslint": "^9.25.1",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1"
   },
   "scripts": {
     "build": "rm -rf lib && tsc --project tsconfig.build.json",
