--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "azure-actions-appservice-rest": "^1.3.19",
-    "azure-actions-webclient": "^1.1.1"
+    "azure-actions-webclient": "^1.1.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.32",
+    "@vercel/ncc": "^0.38.3",
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
@@ -22,7 +24,7 @@
     "typescript-eslint": "^8.31.1"
   },
   "overrides": {
-    "azure-actions-appservice-rest":{
+    "azure-actions-appservice-rest": {
       "xml2js": "^0.6.2"
     }
   },
