--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "scripts": {
     "build": "rm -rf lib && tsc --project tsconfig.build.json",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "engines": {
     "node": ">=20.0.0"
