--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-service-settings",
   "version": "1.0.0",
   "description": "Update/Add Azure WebApp settings",
-  "main": "lib/main.js",
+  "main": "lib/index.js",
   "dependencies": {
     "@actions/core": "^1.11.1",
     "azure-actions-appservice-rest": "^1.3.19",
@@ -29,7 +29,7 @@
     }
   },
   "scripts": {
-    "build": "rm -rf lib && tsc --project tsconfig.build.json",
+    "build": "rm -rf lib && ncc build src/main.ts -o lib",
     "test": "jest",
     "lint": "eslint ."
   },
