--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 # app service settings action
-name: "Azure App Service Settings"
+name: "Azure App Service Settings Community"
 description: "Configure Azure Apps with app settings, connection strings and other general configuration settings"
 inputs:
   app-name: # id of input
@@ -20,13 +20,13 @@ inputs:
   mask-inputs:
     description: "Set it to false if you want to provide input jsons as plain text/you do not want input json values to be masked. This will apply to app-settings-json and connection-strings-json. Default is true"
     required: false
-    default: true
+    default: "true"
 outputs:
   webapp-url: # id of output
     description: "URL to work with your webapp"
 branding:
-  icon: "webapp.svg"
+  icon: "arrow-up-circle"
   color: "blue"
 runs:
   using: "node20"
-  main: "lib/main.js"
+  main: "lib/index.js"
