ci: add Codecov integration and update test step name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,11 @@ jobs:
       run: |
         npm run lint -- --max-warnings 0
 
-    - name: 'Run L0 tests'
+    - name: 'Run Tests'
       run: |
         npm run test -- --colors --coverage
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
