--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -5,7 +5,7 @@
 name: Scorecard supply-chain security
 on:
   schedule:
-    - cron: '17 15 * * 0'
+    - cron: '17 15 1 * *'
   push:
     branches: [ "master" ]
 
