--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,14 +11,15 @@ on:
 
 permissions:
   actions: read
-  checks: write
   contents: read
-  security-events: write
 
 jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      security-events: write
 
     strategy:
       fail-fast: false
