--- a/package.json
+++ b/package.json
@@ -4,28 +4,33 @@
   "description": "Update/Add Azure WebApp settings",
   "main": "lib/index.js",
   "dependencies": {
-    "@actions/core": "^1.11.1",
-    "azure-actions-appservice-rest": "^1.3.34",
+    "@actions/core": "^2.0.3",
+    "azure-actions-appservice-rest": "^1.3.35",
     "azure-actions-webclient": "^1.1.1",
-    "zod": "^4.1.13"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@stylistic/eslint-plugin": "^5.6.1",
-    "@types/jest": "^29.5.14",
+    "@stylistic/eslint-plugin": "^5.8.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@vercel/ncc": "^0.38.4",
     "eslint": "^9.39.1",
-    "globals": "^16.5.0",
-    "jest": "^29.7.0",
+    "globals": "^17.3.0",
+    "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.1"
+    "typescript-eslint": "^8.55.0"
   },
   "overrides": {
+    "@actions/http-client": {
+      "undici": "^6.23.0"
+    },
     "azure-actions-appservice-rest": {
       "xml2js": "^0.6.2"
-    }
+    },
+    "glob": "^13.0.2",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "build": "rm -rf lib && ncc build src/main.ts -o lib",
