--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,10 @@ jobs:
         npm run lint -- --max-warnings 0
 
     - name: 'Run Tests'
+      env:
+        FORCE_COLOR: 1
       run: |
-        npm run test -- --colors --coverage
+        npm run test
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
